# web-bouids.rs

./: Cargo.toml  README.md
src/: application.rs  boid.rs  camera.rs  compute.wgsl  compute2.wgsl  draw.wgsl  main.rs
