[package]
name = "boids-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

resolver = "2"

[dependencies]
anyhow ="1.0.52"
wgpu = { version="0.12.0" }
winit = "0.26.1"
pollster = "0.2.4"
env_logger = "0.9.0"
lazy_static = "1.4.0"
rand = { version = "0.8.4", features=["std"] }
rand_pcg = "0.3.1"
bytemuck = { version = "1.7.3", features=["derive"] }
arr_macro = "0.1.3"